set button color to fix blue text on ios15 devices

--- a/src/main.css
+++ b/src/main.css
@@ -1,4 +1,5 @@
 button {
+    color: rgba(255, 255, 255, 0.87);
     display: flex;
     justify-content: center;
     align-items: center;
